src/test/ui/issue-17758.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/issue-17758.rs:17:9
   |
LL |         self.foo();
   |         ^^^^

warning: not reporting region error due to nll
  --> $DIR/issue-17758.rs:17:14
   |
LL |         self.foo();
   |              ^^^

error: unsatisfied lifetime constraints
  --> $DIR/issue-17758.rs:17:9
   |
LL |     fn bar(&self) {
   |            - let's call the lifetime of this reference `'1`
LL |         self.foo();
   |         ^^^^^^^^^^ argument requires that `'1` must outlive `'a`

error: aborting due to previous error

